force-app/main/default/objects/Territory_Dashboard_Component_Assignment__c/Territory_Dashboard_Component_Assignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Territory Dashboard Component Assignment</label>
</CustomObject>