force-app/main/default/objects/Territory_Dashboard_Component_Assignment__c/fields/DashboardId__c.field-meta.xml
<CustomField>
    <fullName>DashboardId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>DashboardId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>