force-app/main/default/objects/Territory_Dashboard_Component_Assignment__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <inlineHelpText>select either &quot;Territory&quot; or &quot;Region&quot;</inlineHelpText>
    <label>Territory/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>