force-app/main/default/objects/Territory_Dashboard_Component_Assignment__c/fields/TerritoryNames__c.field-meta.xml
<CustomField>
    <fullName>TerritoryNames__c</fullName>
    <description>Territories to be considered in dashboard component for a specific dashboard</description>
    <inlineHelpText>Please delimit territory names with a comma(&apos;,&apos;).</inlineHelpText>
    <label>TerritoryNames</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>